# chat_pdf

./: app.py  pyproject.toml
embeddings/: open_ai_embedding.py
utils/: chatbot.py  relational_db.py  text.py
utils/dbs/: animais_exemplo.sqlite
